[package]
name = "linear_model_allen"
authors = ["Alex K.", "sid"]
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "Modern OpenAL bindings for Rust, but with some changes"
homepage = "https://github.com/skillissuedev/linear_model_allen"
repository = "https://github.com/skillissuedev/linear_model_allen"
readme = "README.md"
categories = ["api-bindings", "multimedia::audio"]
keywords = ["audio", "openal"]
exclude = ["examples/*"]

[dependencies]
thiserror = "1.0"
num-traits = "0.2"
num-derive = "0.3"
serde = { version = "1", features = ["derive"], optional = true }
lazy_static = "1.4.0"
oal-sys-windows = "0.0.3"

[dev-dependencies]
hound = "3.4.0"
lewton = "0.10.2"

[build-dependencies]
cmake = "0.1"
bindgen = "0.68.1"
